# eos-composite-mode

./: .gitignore  Makefile.am  README.md  com.endlessm.CompositeMode.desktop  configure.ac
debian/: changelog  control  copyright
src/: com.endlessm.CompositeMode.gschema.xml  com.endlessm.CompositeMode.xml  ecm-daemon.c  ecm-daemon.h  ecm-settings.c  main.c
